	the hue values in the opposite direction.
	* cvl/cvl_hdr.c, cvl/cvl/cvl_hdr.h,
	cvl/glsl/hdr/tonemap_tumblinrushmeier99_step1.glsl,
	cvl/glsl/hdr/tonemap_tumblinrushmeier99_step2.glsl, cvl/Makefile.am: 
	Add cvl_tonemap_tumblinrushmeier99().
	* cvtool/cmd_tonemap.c, tests/cmd_tonemap.sh, doc/cvtool.texi: Add the
	tumblinrushmeier99 method to the tonemap command.

2008-01-08  Martin Lambers <marlam@marlam.de>

	* doc/cvtool.texi: Fix description of color command.
	* doc/cvtool.texi: Use standard format in command descriptions.

2007-12-09  Martin Lambers <marlam@marlam.de>

	* cvl/Makefile.am: Add glsl/mix/mix.glsl.

2007-12-06  Martin Lambers <marlam@marlam.de>

	* mhlib/mh_os.h: Add MH_STDIN, MH_STDOUT.

2007-11-18  Martin Lambers <marlam@marlam.de>

	* cvtool/cmd_mix.c: Avoid invalid weights. 

2007-11-05  Martin Lambers <marlam@marlam.de>

	* cvtool/cmd_mix.c: Fix typo in help text.

2007-10-31  Martin Lambers <marlam@marlam.de>

	* cvl/cvl_misc.c: Fix documentation of cvl_statistics().

2007-10-28  Martin Lambers <marlam@marlam.de>

	* cvl/cvl_misc.c: In cvl_statistics(): do not compute the sum of all
	elements if not needed.

2007-10-26  Martin Lambers <marlam@marlam.de>

	* cvtool/cmd_mix.c, doc/cvtool.texi: Improve the mix command.

2007-10-25  Martin Lambers <marlam@marlam.de>

	* configure.ac: Bump package and library versions.
	* cvl/cvl_mix.c, cvl/cvl/cvl_mix.h, cvl/glsl/mix/mix.glsl,
	cvl/Makefile.am: Add new cvl_mix() function.
	* cvtool/cmd_mix.c, cvtool/cvtool.c, cvtool/Makefile.am,
	tests/cmd_mix.sh, tests/Makefile.am, doc/cvtool.texi: Add new mix
	command.
	* NEWS: Update.

2007-10-16  Martin Lambers <marlam@marlam.de>

	* configure.ac, doc/cvtool.texi, doc/cvl.texi, doc/cvtool.1,
	doc/doxy/doxyfile: Bump version numbers and dates for 0.2.2.
	* NEWS: Update for 0.2.2.
	* cvl/cvl/cvl_init.h, cvl/cvl_init.c, gnulib/Makefile.am, 
	gnulib/m4/gnulib-cache.m4, gnulib/m4/gnulib-comp.m4,
	gnulib/m4/strverscmp.m4, gnulib/strverscmp.c, gnulib/strverscmp.h: