@@ -100,9 +100,10 @@ nodist_libcvl_la_SOURCES = \
 	glsl/features/canny_nms.glsl.h				\
 	glsl/features/canny_hysterese1.glsl.h			\
 	glsl/features/canny_hysterese2.glsl.h			\
-	glsl/hdr/tonemap_drago03.glsl.h				\
+	glsl/hdr/tonemap_schlick94.glsl.h			\
 	glsl/hdr/tonemap_tumblinrushmeier99_step1.glsl.h	\
 	glsl/hdr/tonemap_tumblinrushmeier99_step2.glsl.h	\
+	glsl/hdr/tonemap_drago03.glsl.h				\
 	glsl/hdr/tonemap_durand02_step1.glsl.h			\
 	glsl/hdr/tonemap_durand02_step2.glsl.h			\
 	glsl/visualization/vector2_color.glsl.h
@@ -157,9 +158,10 @@ EXTRA_DIST = cvl/cvl_version.h.in \
 	glsl/features/canny_nms.glsl				\
 	glsl/features/canny_hysterese1.glsl			\
 	glsl/features/canny_hysterese2.glsl			\
-	glsl/hdr/tonemap_drago03.glsl				\
+	glsl/hdr/tonemap_schlick94.glsl				\
 	glsl/hdr/tonemap_tumblinrushmeier99_step1.glsl		\
 	glsl/hdr/tonemap_tumblinrushmeier99_step2.glsl		\
+	glsl/hdr/tonemap_drago03.glsl				\
 	glsl/hdr/tonemap_durand02_step1.glsl			\
 	glsl/hdr/tonemap_durand02_step2.glsl			\
 	glsl/visualization/vector2_color.glsl
