@@ -24,6 +24,8 @@
 
 #include "cvl_frame.h"
 
+void cvl_tonemap_schlick94(cvl_frame_t *dst, cvl_frame_t *src, float p);
+
 void cvl_tonemap_tumblinrushmeier99(cvl_frame_t *dst, cvl_frame_t *src, float max_abs_lum, 
 	float display_adaptation_level, float max_displayable_contrast);
 
